--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="bootstrap.css">
-        <link rel="stylesheet" href="index.css">
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="bootstrap.css">
+      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Bakes With Fire</title>
     </head>
     <body>
@@ -16,7 +17,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand"><i class="fa fa-camera-retro" aria-hidden="true"></i> Baking With Fire</a>
+            <a href="#" class="navbar-brand"><i class="fa fa-birthday-cake" aria-hidden="true"></i> Baking With Fire</a>
           </div>
           <div class="collapse navbar-collapse" id="bs-collapse-demo">
 
@@ -24,17 +25,17 @@
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
-            <ul class= "nav navbar-nav navbar-right">
+            <!-- <ul class= "nav navbar-nav navbar-right">
               <li><a href="#">Register</a></li>
               <li><a href="#">Login</a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </nav>
 
       <div class="container">
           <div class="jumbotron">
-            <h1><span class="fa fa-camera-retro" aria-hidden="true"></span> Coming Soon...</h1>
+            <h1><span aria-hidden="true"></span>Coming Soon...</h1>
             <p class="">
               Check back in for more details!
             </p>
@@ -42,48 +43,48 @@
           <div class="row">
             <div class="col-lg-4 col-sm-6">
               <div class="thumbnail">
-                <img class='a' src="images2/IMG_0031.jpg" alt="">
+                <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/IMG_0031.JPG" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="thumbnail">
-                <img class='a' src="images2/cfer wedding cake.jpg" alt="">
+                <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/cfer wedding cake.jpg" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="thumbnail">
-                <img class='a' src="images2/IMG_0518.jpg" alt="">
+                <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/IMG_0518.jpg" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="thumbnail">
-                <img class='a' src="images2/IMG_0418.jpg" alt="">
+                <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/IMG_0418.JPG" alt="">
               </div>
             </div>
              <div class="col-lg-4 col-sm-6">
                <div class="thumbnail">
-                 <img class='a' src="images2/img_0032.jpg" alt="">
+                 <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/IMG_0032.JPG" alt="">
                </div>
              </div>
              <div class="col-lg-4 col-sm-6">
                <div class="thumbnail">
-                 <img class='a' src="images2/IMG_0608.jpg" alt="">
+                 <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/IMG_0608.jpg" alt="">
                </div>
              </div>
 
              <div class="col-lg-4 col-sm-6">
                <div class="thumbnail">
-                 <img class='a' src="images2/IMG_0599.jpg" alt="">
+                 <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/IMG_0599.jpg" alt="">
                </div>
              </div>
              <div class="col-lg-4 col-sm-6">
                <div class="thumbnail">
-                 <img class='a' src="images2/dog cookies 2.jpg" alt="">
+                 <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/dog cookies 2.jpg" alt="">
                </div>
              </div>
              <div class="col-lg-4 col-sm-6">
                <div class="thumbnail">
-                 <img class='a' src="images2/img_0594.jpg" alt="">
+                 <img class='a' src="https://raw.githubusercontent.com/bakeswithfire/bakeswithfire.com/master/Images2/IMG_0594.JPG" alt="">
                </div>
              </div>
           </div>
