--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
       <meta charset="utf-8">
       <link rel="stylesheet" href="bootstrap.css">
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="index.css"> <!-- test -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Bakes With Fire</title>
     </head>
-    <body> 
+    <body>
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
